tests/specs/npm/workspace_basic/b/no-exports-sub-path-not-exists.ts
import * as c from "@denotest/c/non-existent";
console.log(c);
